test/programs/good/typechecker/function_compsition_3.lq
fun :: !(Qbit -> Qbit)
fun q = reset q

main :: Qbit -> Qbit
main q = (fun . fun) q
