test/programs/bad/function_has_unit_arg__IncorrectNumberOfFunctionArguments.lq
fun :: () -> Bit
fun unit arg  = 1

main :: Bit
main = other
